--- a/.github/workflows/dongzhai-build.yml
+++ b/.github/workflows/dongzhai-build.yml
@@ -2,15 +2,6 @@ name: 栋仔主题编译
 
 on:
   workflow_dispatch:
-    inputs:
-      version:
-        description: '版本类型'
-        required: true
-        default: 'stable'
-        type: choice
-        options:
-        - stable
-        - dev
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
@@ -27,11 +18,12 @@ jobs:
     - name: 验证必要文件
       run: |
         echo "检查必要文件..."
-        if [ ! -f ".config" ]; then
+        if [ -f ".config" ]; then
+          echo "找到 .config 文件"
+        else
           echo "错误：缺少 .config 文件"
           exit 1
         fi
-        echo "找到 .config 文件"
 
     - name: 安装编译环境
       run: |
@@ -54,59 +46,66 @@ jobs:
         ./scripts/feeds install -a
         echo "软件源更新完成"
 
-    - name: 部署栋仔主题
+    - name: 创建主题目录结构
       run: |
         cd lede
-        echo "部署栋仔个性化主题..."
-        
-        # 创建主题目录
+        echo "创建主题目录结构..."
         mkdir -p package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css
+        echo "目录结构创建完成"
+
+    - name: 创建主题Makefile
+      run: |
+        cd lede
+        echo "创建主题Makefile..."
         
-        # 创建主题的Makefile
-        cat > package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile << 'EOF'
-include $(TOPDIR)/rules.mk
+        # 逐行写入Makefile内容
+        echo "include \$(TOPDIR)/rules.mk" > package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "LUCI_TITLE:=栋仔个性化主题" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "LUCI_DEPENDS:=" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "PKG_VERSION:=1.0" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "PKG_RELEASE:=1" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "include \$(INCLUDE_DIR)/package.mk" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "define Package/luci-theme-dongzhai" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "  \$(call Package/luci/webtemplate)" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "  TITLE:=栋仔个性化主题" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "  DEPENDS:=+luci-compat" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "endef" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "define Package/luci-theme-dongzhai/description" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "  栋仔个性化主题" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "endef" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "define Build/Configure" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "endef" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "define Build/Compile" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "endef" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "define Package/luci-theme-dongzhai/install" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "	\$(INSTALL_DIR) \$(1)/www/luci-static/dongzhai" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "	[ -d ./files ] && \$(CP) ./files/* \$(1)/www/luci-static/dongzhai/" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "endef" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        echo "\$(eval \$(call BuildPackage,luci-theme-dongzhai))" >> package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        
+        echo "Makefile创建完成"
 
-LUCI_TITLE:=栋仔个性化主题
-LUCI_DEPENDS:=
-PKG_VERSION:=1.0
-PKG_RELEASE:=1
-
-include $(INCLUDE_DIR)/package.mk
-
-define Package/luci-theme-dongzhai
-  $(call Package/luci/webtemplate)
-  TITLE:=栋仔个性化主题
-  DEPENDS:=+luci-compat
-endef
-
-define Package/luci-theme-dongzhai/description
-  栋仔个性化主题
-endef
-
-define Build/Configure
-endef
-
-define Build/Compile
-endef
-
-define Package/luci-theme-dongzhai/install
-	$(INSTALL_DIR) $(1)/www/luci-static/dongzhai
-	[ -d ./files ] && $(CP) ./files/* $(1)/www/luci-static/dongzhai/
-endef
-
-$(eval $(call BuildPackage,luci-theme-dongzhai))
-EOF
-
-        # 创建基础CSS文件
-        cat > package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css/style.css << 'EOF'
-/* 栋仔个性化主题样式 */
-.header .fill .brand {
-    color: #ff6600;
-    font-weight: bold;
-}
-EOF
-
-        echo "栋仔主题部署完成"
+    - name: 创建主题CSS文件
+      run: |
+        cd lede
+        echo "创建主题CSS文件..."
+        
+        # 创建CSS文件
+        echo "/* 栋仔个性化主题样式 */" > package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css/style.css
+        echo ".header .fill .brand {" >> package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css/style.css
+        echo "    color: #ff6600;" >> package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css/style.css
+        echo "    font-weight: bold;" >> package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css/style.css
+        echo "}" >> package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css/style.css
+        
+        echo "CSS文件创建完成"
 
     - name: 应用配置
       run: |
