--- a/.config
+++ b/.config
@@ -7694,3 +7694,7 @@ CONFIG_PACKAGE_usbutils=y
 # CONFIG_PACKAGE_fontconfig is not set
 # end of Font-Utils
 # end of Xorg
+# 禁用 Node.js 和相关包
+# CONFIG_PACKAGE_node is not set
+# CONFIG_PACKAGE_node-npm is not set
+# CONFIG_PACKAGE_node-yarn is not set
