--- a/.github/workflows/Dongzai.yml
+++ b/.github/workflows/Dongzai.yml
@@ -41,29 +41,30 @@ jobs:
         ./scripts/feeds install -a
         echo "环境准备完成"
 
-    - name: 创建主题目录
+    - name: 复制主题文件
       run: |
         cd lede
-        mkdir -p package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css
-        echo "主题目录创建完成"
-
-    - name: 创建主题Makefile
-      run: |
-        cd lede
-        echo "创建主题Makefile..."
+        echo "复制主题文件..."
         
-        # 逐行创建Makefile，避免多行字符串问题
-        cat << 'EOF' > package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile
+        # 创建主题目录
+        mkdir -p package/lean/dongzhai-theme/luci-theme-dongzhai
+        
+        # 如果仓库中有主题文件，复制它们
+        if [ -f "../.github/themes/dongzhai/luci-theme-dongzhai/Makefile" ]; then
+          echo "复制Makefile..."
+          cp ../.github/themes/dongzhai/luci-theme-dongzhai/Makefile package/lean/dongzhai-theme/luci-theme-dongzhai/
+        else
+          echo "使用基础Makefile..."
+          # 创建最简单的Makefile
+          cat > package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile << 'EOF'
 include $(TOPDIR)/rules.mk
 LUCI_TITLE:=栋仔主题
-LUCI_DEPENDS:=
 PKG_VERSION:=1.0
 PKG_RELEASE:=1
 include $(INCLUDE_DIR)/package.mk
 define Package/luci-theme-dongzhai
   $(call Package/luci/webtemplate)
   TITLE:=栋仔主题
-  DEPENDS:=+luci-compat
 endef
 define Build/Configure
 endef
@@ -74,8 +75,14 @@ define Package/luci-theme-dongzhai/install
 endef
 $(eval $(call BuildPackage,luci-theme-dongzhai))
 EOF
+        fi
         
-        echo "主题Makefile创建完成"
+        # 创建CSS目录和文件
+        mkdir -p package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css
+        echo "/* 栋仔主题样式 */" > package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css/style.css
+        echo ".header .fill .brand { color: #ff6600; }" >> package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css/style.css
+        
+        echo "主题文件复制完成"
 
     - name: 应用配置
       run: |
@@ -96,7 +103,7 @@ EOF
     - name: 编译固件
       run: |
         cd lede
-        echo "开始编译，使用单线程避免内存问题..."
+        echo "开始编译..."
         make -j1 V=s
         echo "编译完成"
 
