--- a/.github/workflows/Dongzai.yml
+++ b/.github/workflows/Dongzai.yml
@@ -1,4 +1,4 @@
-name: 栋仔主题稳定编译
+name: 栋仔主题编译
 
 on:
   workflow_dispatch:
@@ -15,15 +15,16 @@ jobs:
     - name: 检查代码和配置
       uses: actions/checkout@v4
 
-    - name: 验证必要文件
+    - name: 验证配置文件
       run: |
-        if [ ! -f ".config" ]; then
-          echo "错误：缺少 .config 文件"
+        if [ -f ".config" ]; then
+          echo "找到配置文件"
+        else
+          echo "错误：缺少配置文件"
           exit 1
         fi
-        echo "找到 .config 文件"
 
-    - name: 安装基础环境
+    - name: 安装编译环境
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential git libncurses5-dev libssl-dev python3 unzip wget curl
@@ -34,55 +35,47 @@ jobs:
         git clone $REPO_URL lede
         echo "源码克隆完成"
 
-    - name: 准备环境
+    - name: 更新软件源
       run: |
         cd lede
         ./scripts/feeds update -a
         ./scripts/feeds install -a
-        echo "环境准备完成"
+        echo "软件源更新完成"
 
-    - name: 复制主题文件
+    - name: 准备主题目录
       run: |
         cd lede
-        echo "复制主题文件..."
-        
-        # 创建主题目录
-        mkdir -p package/lean/dongzhai-theme/luci-theme-dongzhai
-        
-        # 如果仓库中有主题文件，复制它们
-        if [ -f "../.github/themes/dongzhai/luci-theme-dongzhai/Makefile" ]; then
-          echo "复制Makefile..."
-          cp ../.github/themes/dongzhai/luci-theme-dongzhai/Makefile package/lean/dongzhai-theme/luci-theme-dongzhai/
-        else
-          echo "使用基础Makefile..."
-          # 创建最简单的Makefile
-          cat > package/lean/dongzhai-theme/luci-theme-dongzhai/Makefile << 'EOF'
-include $(TOPDIR)/rules.mk
-LUCI_TITLE:=栋仔主题
-PKG_VERSION:=1.0
-PKG_RELEASE:=1
-include $(INCLUDE_DIR)/package.mk
-define Package/luci-theme-dongzhai
-  $(call Package/luci/webtemplate)
-  TITLE:=栋仔主题
-endef
-define Build/Configure
-endef
-define Build/Compile
-endef
-define Package/luci-theme-dongzhai/install
-	$(INSTALL_DIR) $(1)/www/luci-static/dongzhai
-endef
-$(eval $(call BuildPackage,luci-theme-dongzhai))
-EOF
-        fi
-        
-        # 创建CSS目录和文件
         mkdir -p package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css
-        echo "/* 栋仔主题样式 */" > package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css/style.css
-        echo ".header .fill .brand { color: #ff6600; }" >> package/lean/dongzhai-theme/luci-theme-dongzhai/files/www/luci-static/dongzhai/css/style.css
+        echo "主题目录创建完成"
+
+    - name: 创建简单主题文件
+      run: |
+        cd lede/package/lean/dongzhai-theme/luci-theme-dongzhai
         
-        echo "主题文件复制完成"
+        # 创建最简单的Makefile
+        echo "include \$(TOPDIR)/rules.mk" > Makefile
+        echo "LUCI_TITLE:=栋仔主题" >> Makefile
+        echo "PKG_VERSION:=1.0" >> Makefile
+        echo "PKG_RELEASE:=1" >> Makefile
+        echo "include \$(INCLUDE_DIR)/package.mk" >> Makefile
+        echo "define Package/luci-theme-dongzhai" >> Makefile
+        echo "  \$(call Package/luci/webtemplate)" >> Makefile
+        echo "  TITLE:=栋仔主题" >> Makefile
+        echo "endef" >> Makefile
+        echo "define Build/Configure" >> Makefile
+        echo "endef" >> Makefile
+        echo "define Build/Compile" >> Makefile
+        echo "endef" >> Makefile
+        echo "define Package/luci-theme-dongzhai/install" >> Makefile
+        echo "	\$(INSTALL_DIR) \$(1)/www/luci-static/dongzhai" >> Makefile
+        echo "endef" >> Makefile
+        echo "\$(eval \$(call BuildPackage,luci-theme-dongzhai))" >> Makefile
+        
+        # 创建简单CSS
+        echo "/* 栋仔主题 */" > files/www/luci-static/dongzhai/css/style.css
+        echo ".brand { color: red; }" >> files/www/luci-static/dongzhai/css/style.css
+        
+        echo "主题文件创建完成"
 
     - name: 应用配置
       run: |
@@ -114,8 +107,6 @@ EOF
         path: lede/bin/targets/**/*.bin
         retention-days: 30
 
-    - name: 编译成功通知
-      if: success()
+    - name: 完成提示
       run: |
-        echo "编译成功完成！"
-        echo "固件已上传到Artifacts"
+        echo "编译流程完成"
